[package]
name = "disnotification"
version = "0.1.0"
edition = "2021"
authors = ["CHISEN Kaoru <cordx56@cordx.net>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15"
tokio = { version = "1", features = ["full"] }
serenity = "0.11"
sqlx = { version = "0.6", features = ["runtime-tokio-rustls", "postgres"] }
